# x-spider

./: .editorconfig  .eslintrc.cjs  .gitattributes  .gitignore  LICENSE  README.md  commitlint.config.cjs  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: 功能建议.md  问题反馈.md
.github/workflows/: gh-pages.yml  release.yml
design/: icon.psd
homepage/: index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
homepage/src/: App.tsx  index.css
src/: App.tsx  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  network.rs
src/components/: Account.tsx  InfiniteScroll.tsx  PageHeader.tsx  SideBar.tsx
src/constants/: antd-theme.ts  file-name-template.ts  routes.tsx  settings.ts
src/css/: preflight.css
src/enums/: MediaType.ts
src/errors/: UnavailableInCurrentOsError.ts
src/events/: app-state-loaded.ts  settings-loaded.ts  system-proxy.ts
src/github/: api.ts
src/hooks/: useAppStateLoaded.ts  useAutoCheckUpdate.ts  useBootstrap.ts  useCheckUpdate.ts  useDownloadingItemCounts.tsx  useEvent.ts  useResolvedProxyUrl.ts  useRunBackgroundTasks.ts  useSettings.ts  useStoreLoaded.ts  useTaskNotifications.ts
src/interfaces/: CreationTask.ts  CrossPlatformInvoker.ts  DownloadFilter.ts  DownloadTask.ts  FileNameTemplateData.ts  RequestOptions.ts  Response.ts  Route.ts  Settings.ts  TwitterAccountInfo.ts  TwitterMedia.ts  TwitterPost.ts  TwitterUser.ts
src/ipc/: network.ts
src/pages/: About.tsx  DownloadManagement.tsx  Homepage.tsx  Settings.tsx
src/stores/: app-state.ts  download.ts  homepage.ts  route-store.ts  route.ts  settings-store.ts  settings.ts
src/twitter/: api.ts  url.ts  utils.ts
src/utils/: aria2.ts  async.ts  cookie.ts  cross-platform.ts  (+8 more)
(+25 files in other folders)
