[package]
name = "x-spider"
version = "0.0.0"
description = "A spider for X (Twitter)"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "shell-all", "fs-all", "path-all", "os-all", "clipboard-all", "app-all", "dialog-all", "window-all", "notification-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { git = "https://github.com/MiningCattiva/reqwest.git", rev = "fe4fa6427a810e3042f681cf1eaecf53d0373315", features = ["json", 'gzip', "__internal_proxy_sys_no_cache"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
